# fuji-x-weekly-simulation-profiles

./: .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: main.yml  on-fortnightly-scrape.yml  on-release-main.yml
cached/: X-Trans-III.txt  X-Trans-IV.txt  X-Trans-V.txt
docs/: index.md  modules.md
failed/: X-Trans-III.txt  X-Trans-IV.txt  X-Trans-V.txt
fuji_profiles/X-Trans-III/: Aged Color.FP1  Agfa Optima.FP1  Astia.FP1  CineStill 800T.FP1  Classic Chrome.FP1  Cross Process.FP1  Dramatic Classic Chrome.FP1  Fujicolor Pro 400H.FP1  Kodachrome II.FP1  Kodak Ektachrome 100SW.FP1  Kodak Ektar 100.FP1  Provia Slide.fp1  Velvia.FP1  Vintage Agfacolor.FP1
fuji_profiles/X-Trans-IV/: 1981 Kodak.FP1  Analog Color.fp1  Bleach Bypass.FP1  Cine Teal.fp1  Classic Color.FP1  Classic Negative.fp1  Classic Slide.FP1  Color Negative.fp1  Cross Process.FP1  Cyanotype.FP1  Elite Chrome Color Fade.FP1  Eterna Bleach Bypass.fp1  Eterna Low-Contrast.fp1  Eterna Summer.FP1  Eterna.fp1  Expired Eterna.fp1  Expired Velvia.FP1  Faded Color.fp1  Fujicolor 100 Industrial.FP1  Fujicolor Pro 400H Overexposed.FP1  Jeff Davenport Night.fp1  Kentmere Pan 400.fp1  Kodachrome 64.fp1  Kodacolor II 126.FP1  Kodacolor.FP1  Kodak Gold 200.fp1  Kodak Porta 160.fp1  Kodak Portra 160.fp1  Kodak Portra 400.fp1  Kodak Portra 800 v3.fp1  Kodak Vision3 250D.fp1  Magenta Negative.fp1  McCurry Kodachrome.fp1  Monochrome Kodachrome.fp1  Nostalgic Negative.fp1  Polaroid II.fp1  Polaroid.fp1  Redscale.FP1  Split-Toned B&W.FP1  Urban Dreams.fp1  (+5 more)
fuji_profiles/X-Trans-V/: 1960 Chrome.fp1  1970s Summer.FP1  1970’s Summer.fp1  1976 Kodak.fp1  Agfa Ultra 100 v2.FP1  Appalachian Negative.FP1  California Summer.FP1  CineStill 400D v1.fp1  CineStill 400D v2.fp1  CineStill 800T.FP1  Easy Reala Ace.FP1  Emulsion 86.FP1  Emulsion ’86.fp1  Expired ECN-2 100T.fp1  Fluorescent Night.fp1  Fujicolor 100 Industrial.FP1  Fujicolor Film.FP1  Fujicolor Natura 1600.FP1  Fujicolor Reala 100.fp1  Fujicolor Super HG v2.fp1  Fujicolor Superia 100.fp1  Fujicolor Superia 1600.FP1  Fujifilm Negative.FP1  Ilford FP4 Plus 125.fp1  Kodachrome 25.fp1  Kodachrome 64.fp1  Kodak Gold 200.fp1  Kodak Gold Max 400 Expired.FP1  Kodak Negative.fp1  Kodak Portra 160 v2 — Fujifilm X-T5 (X-Trans V) Film Simulation Recipe.fp1  Kodak Portra 160 v2.fp1  Kodak Portra 400 v2.fp1  Kodak Royal Gold 400.FP1  Kodak Vericolor Warm.fp1  Kodak Vision3 250D v2.fp1  My Fujifilm X100V Kodachrome 64 Film Simulation Recipe.fp1  Nostalgia Negative.fp1  Nostalgic Americana.FP1  PRO Negative 160C.FP1  Pacific Blues.fp1  (+12 more)
local_setup/: run.sh  setup.sh
notebooks/: film_simulations.py  fuji.ipynb  fuji_template.jinja2  sample.fp1
scrape/: README.md  copy-fuji-profiles.py  models.py  scrape.py  scraper.py
scripts/: check.sh  clean.sh  copy-fuji-profiles.py  delete_cache.sh  install.sh  run.sh  setup.sh  test.sh
templates/: fp1.jinja2
tests/: test_foo.py  test_parsing.py  test_save.py
tests/fuji_profiles/: 1976 Kodak.FP1  Kodak Portra 400 v2-Translated.FP1  Kodak Portra 400 v2.FP1
tests/source/: parsed_tags_with_xa0.csv
