[tool.poetry]
name = "fuji_x_weekly_simulation_profiles"
version = "0.1"
description = "Scrape the www.fujixweekly.com for Fuji X simulation profiles"
authors = ["Nam Tonthat <fn.nam.tonthat@gmail.com>"]
repository = "https://github.com/namtonthat/fuji_x_weekly_simulation_profiles"
documentation = "https://namtonthat.github.io/fuji_x_weekly_simulation_profiles/"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
bs4 = "^0.0.1"
jinja2 = "^3.1.2"
requests = "^2.31.0"
rich = "^13.7.0"
lxml = "^4.9.3"
black = "^23.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
files = ["scrape"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # DoNotAssignLambda
    "E731",
    # XML injection attacks
    "S320",
]

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["fuji_x_weekly_simulation_profiles"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
