[project]
name = "fuji_x_weekly_simulation_profiles"
version = "0.2"
description = "Scrape the www.fujixweekly.com for Fuji X simulation profiles"
authors = ["Nam Tonthat <fn.nam.tonthat@gmail.com>"]
# repository = "https://github.com/namtonthat/fuji_x_weekly_simulation_profiles"
# documentation = "https://namtonthat.github.io/fuji_x_weekly_simulation_profiles/"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
  "bs4>=0.0.2",
  "jinja2>=3.1.6",
  "lxml>=5.3.1",
  "pytest>=8.3.5",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "types-beautifulsoup4>=4.12.0.20250204",
  "types-lxml>=2025.3.4",
  "types-requests>=2.32.0.20250306",
]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "mypy>=1.15.0",
  "pre-commit>=4.1.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.0.0",
  "tox>=4.24.2",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.7",
  "mkdocstrings>=0.29.0",
  "mkdocstrings-python>=1.16.5",
]


[tool.mypy]
files = ["scrape"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 200
fix = true
[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # DoNotAssignLambda
  "E731",
  # XML injection attacks
  "S320",
]

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["fuji_x_weekly_simulation_profiles"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
